--- a/javascript_2/index.html
+++ b/javascript_2/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script.js">
+    <script src="numeros_op.js">
 
     </script>
   </body>
