--- a/javascript_2/index.html
+++ b/javascript_2/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="boolean_condic.js">
-
-    </script>
+    <!--li*100  PARA TESTAR A FUNÇAO SCROLL-->
+    <script src="funcoes.js"></script>
   </body>
 </html>
