--- a/javascript_2/index.html
+++ b/javascript_2/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <!--li*100  PARA TESTAR A FUNÇAO SCROLL-->
-    <script src="funcoes.js"></script>
+    <script src="objeto.js"></script>
   </body>
 </html>
