--- a/javascript_2/index.html
+++ b/javascript_2/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <!--li*100  PARA TESTAR A FUNÇAO SCROLL-->
-    <script src="objeto.js"></script>
+    
+    <a href="#" class="btn">Clique</a>
+    <script src="tudoeobjeto.js"></script>
   </body>
 </html>
