--- a/javascript_2/index.html
+++ b/javascript_2/index.html
@@ -9,6 +9,6 @@
     <!--li*100  PARA TESTAR A FUNÇAO SCROLL-->
     
     <a href="#" class="btn">Clique</a>
-    <script src="tudoeobjeto.js"></script>
+    <script src="arrays.js"></script>
   </body>
 </html>
